# mqtt-multi-proxy

./: .dockerignore  .gitignore  .releaserc.json  API.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
.claude/agents/: docker-expert.md  mqtt-protocol-expert.md  rust-perf-expert.md
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: latency.rs  throughput.rs
config/: config.toml  mosquitto.conf
src/: broker_storage.rs  client_registry.rs  config.rs  connection_manager.rs  crypto.rs  lib.rs  main.rs  main_broker_client.rs  metrics.rs  mqtt_listener.rs  proxy.rs  settings_storage.rs  web_server.rs
web-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.css  App.tsx  index.css
web-ui/src/components/: AddBrokerForm.tsx  BrokerList.tsx  MainBrokerSettings.tsx  MessageViewer.css  MessageViewer.tsx  MetricsDashboard.tsx
